[No-Card] [Shashank] | Fix menubar alignment issue

--- a/src/app/components/assessment-menu/assessment-menu.component.css
+++ b/src/app/components/assessment-menu/assessment-menu.component.css
@@ -71,3 +71,6 @@
   height: 2.8125em
 }
 
+.menu-bar-right{
+  padding-right: 4.98em;
+}
